# Tensor-WMMA-Camp

./: CMakeLists.txt  ChangeLog.txt  README.md
.vscode_sample/: c_cpp_properties.json  launch.json  settings.json
src/: common.cu  common.h  main.cu  test.cu  utils.h
src/wmma/: gemm_bf16.cu  gemm_fp16.cu  wmma_function.h
